--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # Requirements for Gallstone Prediction Model - Streamlit Cloud Deployment
-streamlit==1.25.0
+streamlit>=1.28.0
 pandas>=1.5.3
 numpy>=1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-shap==0.42.1
+matplotlib>=3.8.0
+seaborn>=0.12.2
+shap>=0.42.1
 scikit-learn>=1.3.0
+pillow>=10.0.0
